--- a/app/globals.css
+++ b/app/globals.css
@@ -195,6 +195,7 @@ body {
     @apply max-w-[1200px];
     background-color: var(--bg-secondary);
     border-radius: 1rem;
+    padding: 0.75rem;
     border: 1px solid var(--border-secondary);
     transition: background-color 0.3s ease, border-color 0.3s ease;
   }
